# mach_r

./: .gitignore  ACTUALLY_WORKING.md  AGENTS.md  ARCHITECTURE.md  AUDIT_REPORT.txt  AUDIT_SUMMARY.md  BOOTABLE_ROADMAP.md  BRUTAL_AUDIT.py  BUILD_DECISION.md  BUILD_FINAL_STATUS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_PLAN.md  Dockerfile.build  ENGINEERING_PLAN.md  GRANULAR_TODO.md  INTERACTIVE_KERNEL.md  LICENSE  MACH_PORT_SEMANTICS.md  PROJECT_PLAN.md  PROJECT_REALITY.md  PUBLICATION_READINESS.md  README.md  REALITY_CHECK.md  REAL_INVENTORY.py  REAL_MACH_R_DESIGN.md  REAL_ROADMAP.md  ROADMAP.md  SYNTHESIS_STRATEGY.md  TODO.md  TOOL_ANALYSIS.md  WORKING_STATUS.md  aarch64-qemu.ld  analyze.py  audit_analyzer.py  build-all.sh  build-container.sh  build-kernel.sh  (+8 more)
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  (+1 more)
analysis/: MIG_ANALYSIS.md
build-scripts/: build-kernel.sh  create-bootable.sh
docs/: ADDING_MODULE.md  ARCHITECTURE.md  BUILD_CONTAINER.md  INDEX.md  MACH_R_SYNTHESIS.md  STRUCTURE.md
linkers/: riscv64.ld
qemu/: aarch64-virt.json  aarch64-virt.ld  x86_64-pc.json
real_kernel/: README.md
real_os/: Cargo.toml
reports/: OSFMK_AUDIT.md  OSFMK_REFERENCE_INDEX.md  OSFMK_TRANSLATION_PLAN.md
scripts/: build-in-container.sh  create-iso.sh  run-qemu-x86_64.sh  setup-build-env.sh
specs/: SynthesisVerification.tla
src/: async_ipc.rs  console.rs  external_pager.rs  interrupt.rs  lib.rs  main copy.rs  main.rs  memory.rs  message.rs  paging.rs  panic.rs  port.rs  scheduler.rs  syscall.rs  task.rs  trap.rs  types.rs  userland.rs  utilities.rs
synthesis/: Cargo.toml  Dockerfile  MULTIBOOT2_IMPLEMENTATION.md  Makefile  Makefile.broken  Makefile.old  aarch64-qemu.ld  build-bootloader.sh  docker-compose.yml  minimal_kernel.rs  run_mach_r.sh  test-boot.sh  test_boot.S  test_simple.S
tools/: osfmk_audit.py
tools/mig-rust/: CLAUDE_CODE_AGENTS_MCP_GUIDE.md  CROSS_PLATFORM_DESIGN.md  Cargo.toml  MIG_RUST_COMPLETE_SPECIFICATION.md  PHASE2_CONTINUATION.md  PHASE2_DESIGN.md  PURE_RUST_COMPLIANCE.md  PURE_RUST_SESSION_SUMMARY.md  README_RESEARCH.md  RESEARCH_SUMMARY.md  RUST_CODEGEN_DESIGN.md  SERVER_STUB_DESIGN.md  SESSION_2025-11-17.md  SESSION_2025-11-18_MILESTONE3.md  SESSION_2025-11-18_PART2_RUST_CODEGEN.md  TESTING_RESULTS.md  modern_file.h  modern_fileServer.c  modern_fileServer.h  modern_fileUser.c
tools/mig-rust/examples/: modern_file_service.defs  modern_rpc_service.defs
tools/mig-rust/mach_r/: Cargo.toml
tools/mig-rust/mach_r/src/: error.rs  ipc.rs  lib.rs
tools/mig-rust/src/: error.rs  lib.rs  main.rs
tools/mig-rust/src/codegen/: c_generator.rs  c_header.rs  c_server_stubs.rs  c_user_stubs.rs  mod.rs  rust_generator.rs  rust_stubs.rs
tools/mig-rust/src/lexer/: mod.rs  simple.rs  tokens.rs
tools/mig-rust/src/parser/: ast.rs  mod.rs
tools/mig-rust/src/preprocessor/: expr.rs  filter.rs  mod.rs  symbols.rs
tools/mig-rust/src/semantic/: analyzer.rs  layout.rs  mod.rs  types.rs
tools/mig-rust/src/types/: mod.rs
tools/mig-rust/tests/: array.defs  port.defs  proptest_strategies.rs  simple.defs  test_apple_defs.rs  test_generated_code_compilation.rs  test_property_based.proptest-regressions  test_property_based.rs  test_rust_codegen.rs
tools/mig-rust/tests/integration/: test_rust_codegen.rs
xtask/: Cargo.toml
(+263 files in other folders)
