[package]
name = "mach_r"
version = "0.1.0"
edition = "2021"
authors = ["Mach_R Contributors"]

[[bin]]
name = "mach_r"
path = "src/main.rs"

[lib]
name = "mach_r"
path = "src/lib.rs"

[dependencies]
# Core no_std dependencies for embedded development
spin = "0.9"
heapless = "0.8"

[dev-dependencies]
# For testing in std environment

[features]
default = []
std = []

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
panic = "abort"     # Don't unwind on panic
strip = true        # Strip symbols

[profile.dev]
panic = "abort"     # Don't unwind on panic in dev either

[workspace]
members = [
    ".",
    "xtask",
]
