[workspace]
members = [".", "mach_r"]
resolver = "2"

[workspace.package]
authors = ["Claude Code <noreply@anthropic.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Oichkatzelesfrettschen/mach_r"

[package]
name = "mig-rust"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure Rust implementation of Mach Interface Generator (MIG)"

[[bin]]
name = "mig"
path = "src/main.rs"

[dependencies]
# Pure Rust CLI argument parsing
clap = { version = "4.5.51", features = ["derive"] }

# Error handling
thiserror = "2.0"

[dev-dependencies]
# Property-based testing
proptest = "1.5"

# Integration testing
tempfile = "3.14"
