[package]
name = "mach_r"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Type-safe Rust runtime for Mach IPC"

[dependencies]
# Error handling
thiserror = "2.0"

# Async runtime (optional)
tokio = { version = "1.43", features = ["sync", "rt"], optional = true }

# Async traits
async-trait = { version = "0.1", optional = true }

# Serialization (for future CapnProto integration)
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
default = []
async = ["tokio", "async-trait"]
serde = ["dep:serde"]

[dev-dependencies]
tokio = { version = "1.43", features = ["full"] }
